--- a/app/views/spree/social/_facebook.html.erb
+++ b/app/views/spree/social/_facebook.html.erb
@@ -1,23 +1,34 @@
-<% unless Spree::Social::Config.preferred_facebook_app_id.nil? %>
-  <% content_for :head do %>
-    <meta property="og:title" content="<%= @product.name %>" />
-    <meta property="og:type" content="product" />
-    <meta property="og:url" content="<%= spree.product_url(@product) %>" />
-    <meta property="og:description" content="<%= @product.description %>" />
-    <% @product.images.each do |img| %>
-      <meta property="og:image" content="<%= absolute_image_url(img.attachment.url) %>" />
-    <% end %>
+<% content_for :head do %>
+  <meta property="og:url"                content="<%= spree.product_url(@product) %>" />
+  <meta property="og:type"               content="product" />
+  <meta property="og:title"              content="<%= @product.name %>" />
+  <meta property="og:description"        content="<%= @product.description %>" />
+  <meta property="og:image" content="<%= absolute_image_url(@product.images.first.attachment.url) %>" />
+
+  <% if Spree::Social::Config.preferred_facebook_app_id.present? %>
     <meta property="fb:app_id" content="<%= Spree::Social::Config.preferred_facebook_app_id %>" />
   <% end %>
 
-  <div id="fb-root"></div>
+<% end %>
 
+<div id="fb-root"></div>
+
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+
+<!-- Your like button code -->
   <div
     class="fb-like"
-    data-send="<%= Spree::Social::Config.preferred_facebook_send_button %>"
+    data-href="<%= spree.product_url(@product) %>"
     data-width="450"
     data-show-faces="<%= Spree::Social::Config.preferred_facebook_show_faces %>"
     data-layout="<%= Spree::Social::Config.preferred_facebook_layout %>"
     data-colorscheme="<%= Spree::Social::Config.preferred_facebook_color_scheme %>"
-    data-action="<%= Spree::Social::Config.preferred_facebook_verb_to_display %>"></div>
-<% end %>
+    data-action="<%= Spree::Social::Config.preferred_facebook_verb_to_display %>"
+    data-share="<%= Spree::Social::Config.preferred_facebook_send_button %>"></div>
