change back to original code

--- a/app/views/spree/social/_facebook.html.erb
+++ b/app/views/spree/social/_facebook.html.erb
@@ -3,7 +3,9 @@
   <meta property="og:type"               content="product" />
   <meta property="og:title"              content="<%= @product.name %>" />
   <meta property="og:description"        content="<%= @product.description %>" />
-  <meta property="og:image" content="<%= absolute_image_url(@product.images.first.attachment.url) %>" />
+  <% @product.images.each do |img| %>
+    <meta property="og:image" content="<%= absolute_image_url(img.attachment.url) %>" />
+  <% end %>
 
   <% if Spree::Social::Config.preferred_facebook_app_id.present? %>
     <meta property="fb:app_id" content="<%= Spree::Social::Config.preferred_facebook_app_id %>" />
