comment unused js, move to previous code

--- a/app/views/spree/shared/_fb_script.html.erb
+++ b/app/views/spree/shared/_fb_script.html.erb
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   var bindFacebookEvents, fb_events_bound, fb_root, initializeFacebookSDK, loadFacebookSDK, restoreFacebookRoot, saveFacebookRoot;
 
   fb_root = null;
@@ -44,4 +44,4 @@
       xfbml: true
     });
   };
-</script>
+</script> -->
