--- a/app/views/spree/social/_twitter.html.erb
+++ b/app/views/spree/social/_twitter.html.erb
@@ -2,9 +2,9 @@
   href="https://twitter.com/share"
   data-text="<%= twitter_text(@product) %>"
   data-url="/"
-  data-hashtags="example,demo"
-  data-via="shivamjain49"
-  data-related="shivamjain49">
+  data-hashtags="spree, twitter"
+  data-via="vinsol"
+  data-related="vinsol">
   <%= Spree.t(:tweet, scope: [:social, :buttons]) %>
 </a>
 
