--- a/app/views/spree/social/_google_plus.html.erb
+++ b/app/views/spree/social/_google_plus.html.erb
@@ -1,10 +1,3 @@
-<g:plusone size="medium"></g:plusone>
-
-<!-- Place this render call where appropriate -->
-<script>
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
+<!-- google plus has removed descriptions from preview  -->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<div class="g-plus" data-action="share" data-href="<%= spree.product_url(@product) %>" ></div>
