comment unused code, update tumblr api

--- a/app/views/spree/social/_tumblr.html.erb
+++ b/app/views/spree/social/_tumblr.html.erb
@@ -1,5 +1,19 @@
-<a class="tumblr-share-button" href="https://www.tumblr.com/share"
-  data-href="<%= spree.product_url(@product) %>"
->
+<% if @product.images.present? %>
+  <a class="tumblr-share-button" href="https://www.tumblr.com/share"
+    data-content="<%= absolute_image_url(@product.images.first.attachment.url) %>"
+    data-caption="<%= @product.name %> "
+    data-posttype="photo"
+    data-href="<%= spree.product_url(@product) %>"
+  >
+<% else %>
+  <a class="tumblr-share-button" href="https://www.tumblr.com/share"
+    data-content="<%= spree.product_url(@product) %>"
+    data-caption="<%= @product.description %>"
+    data-title="<%= @product.name %> "
+    data-posttype="link"
+    data-href="<%= spree.product_url(@product) %>"
+  >
+<% end %>
 </a>
+
 <script id="tumblr-js" async src="https://assets.tumblr.com/share-button.js"></script>
